# siku

./: .env.example  .gitignore  README.md  diagnose_bilibili.sh  pyproject.toml
docs/: decision-log.md  project-overview.md
docs/superpowers/plans/: 2026-06-14-uv-project-management.md  2026-06-20-development-constitution.md  2026-06-27-remove-km-ingest.md
docs/superpowers/specs/: 2026-06-13-knowledge-ingest-cli-design.md  (+2 more)
km/: __init__.py  __main__.py  agent_runner.py  agent_runtime.py  agent_state.py  agent_tools.py  asset_store.py  bilibili.py  config.py  domain.py  errors.py  index.py  models.py  obsidian.py  routing.py  summary.py  url_state.py  web_article.py  whisper.py
openspec/: config.yaml
prompts/summary/: common.md
prompts/summary/domains/: ai.md  (+10 more)
scripts/: test_agent_ingest.sh  test_bilibili_download.sh
skills/bilibili-ingest/: SKILL.md
skills/domain-classification/: SKILL.md
skills/hermes-knowledge-ingest/: SKILL.md
skills/obsidian-write/: SKILL.md
skills/summary-generation/: SKILL.md
skills/url-routing/: SKILL.md
skills/web-article-ingest/: SKILL.md
skills/whisper-transcription/: SKILL.md
tests/: test_agent_config_runtime.py  test_agent_runner_cli.py  test_agent_state_machine.py  test_agent_tools.py  test_asset_store.py  test_bilibili_download_script.py  test_bilibili_pipeline.py  test_cli_contract.py  test_config.py  test_domain_classification.py  test_index.py  test_obsidian_note.py  test_openvino_whisper.py  test_project_skills.py  test_summary_generation.py  test_url_routing.py  test_url_state.py  test_web_article_pipeline.py
(+82 files in other folders)
